force-app/main/default/objects/Org_Health_Score__c/Org_Health_Score__c.object-meta.xml
<CustomObject>
    <description>Stores historical org health score snapshots calculated from Audit Trail non-compliance events. Used for trend reporting and compliance dashboards.</description>
    <label>Org Health Score</label>
    <nameField>
        <displayFormat>OHS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Health Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>