force-app/main/default/objects/Org_Health_Score__c/fields/Calculated_By__c.field-meta.xml
<CustomField>
    <fullName>Calculated_By__c</fullName>
    <label>Calculated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled Job</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>