force-app/main/default/objects/Org_Health_Score__c/fields/Calculation_Period__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Period__c</fullName>
    <label>Calculation Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>