force-app/main/default/objects/Org_Health_Score__c/fields/Critical_Events__c.field-meta.xml
<CustomField>
    <fullName>Critical_Events__c</fullName>
    <description>Count of CRITICAL severity events in this period</description>
    <label>Critical Events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>