force-app/main/default/objects/Org_Health_Score__c/fields/Critical_Weight__c.field-meta.xml
<CustomField>
    <fullName>Critical_Weight__c</fullName>
    <description>Weighted penalty applied for critical events</description>
    <label>Critical Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>