force-app/main/default/objects/Org_Health_Score__c/fields/High_Events__c.field-meta.xml
<CustomField>
    <fullName>High_Events__c</fullName>
    <description>Count of HIGH severity events in this period</description>
    <label>High Events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>