force-app/main/default/objects/Org_Health_Score__c/fields/High_Weight__c.field-meta.xml
<CustomField>
    <fullName>High_Weight__c</fullName>
    <description>Weighted penalty applied for high events</description>
    <inlineHelpText>Weighted penalty applied for high events</inlineHelpText>
    <label>High Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>