force-app/main/default/objects/Org_Health_Score__c/fields/Low_Events__c.field-meta.xml
<CustomField>
    <fullName>Low_Events__c</fullName>
    <description>Count of LOW severity events in this period</description>
    <inlineHelpText>Count of LOW severity events in this period</inlineHelpText>
    <label>Low Events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>