force-app/main/default/objects/Org_Health_Score__c/fields/Medium_Events__c.field-meta.xml
<CustomField>
    <fullName>Medium_Events__c</fullName>
    <description>Count of MEDIUM severity events in this period</description>
    <inlineHelpText>Count of MEDIUM severity events in this period</inlineHelpText>
    <label>Medium Events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>