force-app/main/default/objects/Org_Health_Score__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free text notes or anomaly observations for this snapshot</description>
    <inlineHelpText>Free text notes or anomaly observations for this snapshot</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>