force-app/main/default/objects/Org_Health_Score__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>Final weighted org health score (0–100)</description>
    <label>Overall Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>