force-app/main/default/objects/Org_Health_Score__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>End of the period this score covers</description>
    <inlineHelpText>End of the period this score covers</inlineHelpText>
    <label>Period End</label>
    <type>DateTime</type>
</CustomField>