force-app/main/default/objects/Org_Health_Score__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Start of the period this score covers</description>
    <inlineHelpText>Start of the period this score covers</inlineHelpText>
    <label>Period Start</label>
    <type>DateTime</type>
</CustomField>