force-app/main/default/objects/Org_Health_Score__c/fields/Previous_Score__c.field-meta.xml
<CustomField>
    <fullName>Previous_Score__c</fullName>
    <description>Score from the previous snapshot for delta calculation</description>
    <label>Previous Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>