force-app/main/default/objects/Org_Health_Score__c/fields/Recency_Decay_Factor__c.field-meta.xml
<CustomField>
    <fullName>Recency_Decay_Factor__c</fullName>
    <description>Decay multiplier applied based on event recency</description>
    <inlineHelpText>Decay multiplier applied based on event recency</inlineHelpText>
    <label>Recency Decay Factor</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>