force-app/main/default/objects/Org_Health_Score__c/fields/Salesforce_User_Events__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Events__c</fullName>
    <description>Count of events performed by salesforce.com support users</description>
    <label>Salesforce User Events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>