force-app/main/default/objects/Org_Health_Score__c/fields/Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Score_Date__c</fullName>
    <description>Date this score snapshot was calculated</description>
    <inlineHelpText>Date this score snapshot was calculated</inlineHelpText>
    <label>Score Date</label>
    <type>Date</type>
</CustomField>