force-app/main/default/objects/Org_Health_Score__c/fields/Score_Delta__c.field-meta.xml
<CustomField>
    <fullName>Score_Delta__c</fullName>
    <description>Overall_Score__c - Previous_Score__c — change from last period</description>
    <formula>Overall_Score__c - Previous_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Change from last period (Overall_Score__c - Previous_Score__c)</inlineHelpText>
    <label>Score Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>