force-app/main/default/objects/Org_Health_Score__c/fields/Score_Status__c.field-meta.xml
<CustomField>
    <fullName>Score_Status__c</fullName>
    <description>Healthy / Warning / Critical / At Risk</description>
    <formula>IF(Overall_Score__c &gt;= 80, &apos;✅ Healthy&apos;,
IF(Overall_Score__c &gt;= 60, &apos;⚠️ Warning&apos;,
IF(Overall_Score__c &gt;= 40, &apos;🔶 At Risk&apos;,
&apos;🚨 Critical&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Healthy / Warning / Critical / At Risk</inlineHelpText>
    <label>Score Status</label>
    <type>Text</type>
</CustomField>