force-app/main/default/objects/Org_Health_Score__c/fields/Top_Violating_Section__c.field-meta.xml
<CustomField>
    <fullName>Top_Violating_Section__c</fullName>
    <description>Section with the highest non-compliance event count</description>
    <inlineHelpText>Section with the highest non-compliance event count</inlineHelpText>
    <label>Top Violating Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>