force-app/main/default/objects/Org_Health_Score__c/fields/Total_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_Events__c</fullName>
    <formula>Critical_Events__c + High_Events__c + Medium_Events__c + Low_Events__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Events</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>